syntax = "proto3";

option csharp_namespace = "grpcClientStreamingServer";

package ClientStreaming;

service ClientStreaming {
  rpc SendMessage (stream MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
